--- a/dolo-app/docker-compose.yml
+++ b/dolo-app/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     container_name: postgres-dev
     build: ./../compose/postgres/
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
       - postgres_backup:/backups
     environment:
       - POSTGRES_USER=dolo_app
